# Messenger

./: .gitignore  README.md
API/: common_structure.h  protocols.h  resp_codes.h
Messenger/: CMakeLists.txt  resources.qrc
Messenger/include/: common_defs.h
Messenger/include/Client/: client.h  cryptographer.h  dbmanager.h  p2pconnector.h  timer.h
Messenger/include/GUI/: autoexpandtextedit.h  chatmemberform.h  chatparamswindow.h  common.h  contactentry.h  loginwindow.h  mainwindow.h  messageentryfield.h  messageform.h  slidepanel.h
Messenger/resources/: resources.qrc
Messenger/src/: main.cpp
Messenger/src/Client/: client.cpp  cryptographer.cpp  dbmanager.cpp  p2pconnector.cpp  timer.cpp
Messenger/src/GUI/: autoexpandtextedit.cpp  chatmemberform.cpp  chatparamswindow.cpp  contactentry.cpp  loginwindow.cpp  mainwindow.cpp  messageentryfield.cpp  messageform.cpp  slidepanel.cpp
Messenger/ui/: chatmemberform.ui  chatparamswindow.ui  loginwindow.ui  mainwindow.ui  messageform.ui  slidepanel.ui
SQL/: db_client.sql  db_server.sql  db_server_create
Server/: CMakeLists.txt  main.cpp
Server/DB_Manager/: database.cpp  database.h
Server/ServerUtils/: cryptographer.cpp  cryptographer.h  messagequeue.cpp  messagequeue.h  timer.h
